--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongodb": "^5.8.0",
+    "mongodb": "^5.8.1",
     "mongoose": "^7.1.0",
-    "nodemailer": "^6.9.1"
+    "moongose": "^1.0.0",
+    "nodemailer": "^6.9.1",
+    "swagger": "^0.7.5",
+    "swagger-client": "^3.20.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
